# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.13

  - WL#12110, Extend PropertyDefinitions.PropertyKey usage.

  - Fix for Bug#81063 (23098159), w/ rewriteBatchedStatements, when 2 tables involved, the rewriting not correct.

  - Fix for Bug#84813 (25501750), rewriteBatchedStatements fails in INSERT.

  - Fix for Bug#81196 (23227334), CONNECTOR/J NOT FOLLOWING DATABASE CHARACTER SET.

  - Fix for Bug#72609 (18749544), SETDATE() NOT USING A PROLEPTIC GREGORIAN CALENDAR.

  - Fix for Bug#87534 (26730196), UNION ALL query fails when useServerPrepStmts=true on database connection.
    Test case only. Base bug fixed in MySQL 5.7.22.

  - Fix for Bug#89948 (27658489), Batched statements are not committed for useLocalTransactionState=true.

  - Fix for BUG#22305979, WRONG RECORD UPDATED IF SENDFRACTIONALSECONDS=FALSE AND SMT IS SCROLLABLE.

  - Fix for Bug#27102307, CHANGE USESSL AND VERIFYSERVERCERTIFICATE TO SSLMODE OPTION.

  - Fix for Bug#28150662, CONNECTOR/J 8 MALFORMED DATABASE URL EXCEPTION WHIT CORRECT URL STRING.

  - Fix for Bug#91421 (28246270), ALLOWED VALUES FOR ZERODATETIMEBEHAVIOR ARE INCOMPATIBLE WITH NETBEANS.

  - Fix for Bug#23045604, XSESSION.GETURI() RETURNS NPE.

  - Fix for Bug#21914769, NPE WHEN TRY TO EXECUTE INVALID JSON STRING.

  - Fix for Bug#BUG#90887 (28034570), DATABASEMETADATAUSINGINFOSCHEMA#GETTABLES FAILS IF METHOD ARGUMENTS ARE NULL.

  - Fix for Bug#28207088, C/JAVA: UPDATECLOB(INT COLUMNLABEL, JAVA.SQL.CLOB CLOB) IS FAILING.

  - Fix for Bug#27629553, NPE FROM GETSESSION() FOR SSL CONNECTION WHEN NO PASSWORD PASSED.

Version 8.0.12

  - Fix for Bug#28208000, MASTER : HANG IN ASYNCHRONOUS SELECT TEST.

  - WL#10544, Update MySQL 8.0 keywords list.

  - WL#11858, DevAPI: Core API v1 alignment.

  - Fix for Bug#27652379, NPE FROM GETSESSION(PROPERTIES) WHEN HOST PARAMETER IS GIVEN IN SMALL LETTER.
