@@ -184,7 +184,6 @@ JsonParser.5=No valid value was found.
 JsonParser.6=Attempt to add character ''{0}'' to unopened string.
 JsonParser.7=Unknown escape sequence ''\\{0}''.
 JsonParser.8=Wrong ''{0}'' position after ''{1}''.
-JsonParser.9=Base part ''{0}'' is too long, only 10 digits are allowed.
 JsonParser.10=Wrong ''{0}'' occurrence after ''{1}'', it is allowed only once per number.
 JsonParser.11='.' is not allowed in the exponent.
 JsonParser.12=Wrong literal ''{0}''.
